[gd_scene load_steps=3 format=3 uid="uid://bx1svnkybibqq"]

[ext_resource type="Script" uid="uid://ch3v6aja20iwd" path="res://scripts/Obstacles/obstacle_base.gd" id="1_3mu8f"]

[sub_resource type="SphereShape3D" id="SphereShape3D_2tjag"]

[node name="ObstacleBase" type="Area3D"]
script = ExtResource("1_3mu8f")

[node name="ObstacleAreaOverlap" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_2tjag")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
